# tracked-vehicle-project

./: README.md
tracked_vehicle01/: CMakeLists.txt  package.xml
tracked_vehicle01/config/: joint_names_tracked_vehicle01.yaml
tracked_vehicle01/launch/: display.launch  gazebo.launch
tracked_vehicle01/meshes/: GPS_Link.STL  imu_Link.STL  radar_Link.STL  wheel10_Link.STL  wheel1_Link.STL  wheel2_Link.STL  wheel3_Link.STL  wheel4_Link.STL  wheel5_Link.STL  wheel6_Link.STL  wheel7_Link.STL  wheel8_Link.STL  wheel9_Link.STL
tracked_vehicle01/urdf/: tracked_vehicle01.csv  tracked_vehicle01.urdf
tracked_vehicle_demo/: README.md
vehicle_all/: CMakeLists.txt  package.xml
vehicle_all/launch/: display.launch  gazebo.launch  gazebo_three_vehicles.launch  gazebo_three_vehicles_with_following.launch  vehicle_following.launch
vehicle_all/meshes/: GPS_Link.STL  control_Link.STL  radar_Link.STL  wheel10_Link.STL  wheel1_Link.STL  wheel2_Link.STL  wheel3_Link.STL  wheel4_Link.STL  wheel5_Link.STL  wheel6_Link.STL  wheel7_Link.STL  wheel8_Link.STL  wheel9_Link.STL
vehicle_all/scripts/: vehicle_follower.py
vehicle_all/urdf/: vehicle_all.csv  vehicle_all.urdf  vehicle_all_black.urdf  vehicle_all_grey.urdf  vehicle_all_white.urdf
